--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-player": "^2.13.0",
     "react-router-dom": "^6.15.0"
   },
   "devDependencies": {
